# atlas-ai

./: .gitignore  README.md  log  publish.sh  setup.py
atlas/: __init__.py  cli.py  data_sinks.py
docs/: design.md  docusaurus.config.js  package-lock.json  sidebars.js
examples/: .gitignore  cot_dataset.py  indexer_example.py  instruction_dataset.py  object_detection_coco.py  object_detection_yolo.py  paired_text_dataset.py  ranking_dataset.py  segmentation_coco.py  similarity_dataset.py  tabular_csv.py  tabular_parquet.py  text_dataset.py  vision_language_dataset.py
lance_utils/: DESIGN.md  README.md  cleanup.sh  pyproject.toml  run_all_examples.sh  run_tests.sh
lance_utils/atlas/: __init__.py  builder.py  cli.py  system.py  visualizer.py
lance_utils/atlas/tasks/: base.py
lance_utils/atlas/tasks/classification/: extractors.py
lance_utils/atlas/tasks/language/: extractors.py
lance_utils/atlas/tasks/object_detection/: extractors.py
lance_utils/atlas/tasks/vision_language/: extractors.py
lance_utils/atlas_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lance_utils/examples/: README.md  convert_dpo.py  convert_llm_pretraining.py  convert_object_detection.py  visualize_lance_images.py
lance_utils/lance_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_coco_segmentation_sink.py  test_coco_sink.py  test_cot_sink.py  test_csv_sink.py  test_embedding_sink.py  test_image_metadata.py  test_instruction_sink.py  test_paired_text_sink.py  test_parquet_sink.py  test_ranking_sink.py  test_system.py  (+4 more)
(+55 files in other folders)
